Fix the bug with select tag not being styled on mobile.

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -860,7 +860,8 @@ html {
 
 .step-five__additional-info-input {
   min-width: 10rem;
-  max-width: 15rem; }
+  max-width: 15rem;
+  -webkit-appearance: none; }
 
 .step-five__step-five-footer {
   display: flex;
