--- a/src/css/reservation-form/StepFive.scss
+++ b/src/css/reservation-form/StepFive.scss
@@ -56,6 +56,7 @@
 .step-five__additional-info-input {
     min-width: 10rem;
     max-width: 15rem;
+    -webkit-appearance: none;
 }
 
 .step-five__step-five-footer {
